--- a/style.css
+++ b/style.css
@@ -1,37 +1,83 @@
+@import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-    font-family:  Arial, sans-serif;
+    font-family: "Schibsted Grotesk", sans-serif;
     box-sizing: border-box;
 }
 html{
     scroll-behavior: smooth;
 }
 body{
-    background: #393E46;
-    color:#EEEEEE;    
+    min-height: 100vh;
+    background: white;
+    color:black;    
 }
-#header{
+#landing{
+    position: relative;
     width: 100%;
-    height: 15vh;
-    position: fixed;
-    background: #ffffff;
+    min-height: 100vh;
+    background: url(public/images/Background.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: solid;
+}
+#landing h1{
+    color: black;
+    font-size: 60px;
+    font-weight: 800;
+    letter-spacing: 2px;
+    margin-top: 40vh;
 
 }
-.container{
-    padding: 10px 10% 10%;
+#landing h1 span{
+    color: rgb(35, 128, 250);
+    
 }
-nav{
+#landing p{
+    color: black;
+    font-size: 30px;
+    font-weight: 600;
+
+}
+#landing i{
+    margin-top: 35vh;
+    font-size: 40px;
+    color: black
+}
+header{
+    width: 100%;
+    z-index: 10;
+    position: fixed;
+    top:0;
+    left:0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px;
+    transition: 1s;
+}
+header.sticky{
+    background-color: #5858587e;
+}
+.logo{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: -5px;
+    font-family: "Playwrite NG Modern", serif;
+    text-shadow: rgb(0, 0, 0) 2px 2px 5px;
+}
+header nav{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-}
-
-.logo{
-    width: 140px;
-
+    justify-content: center;
 }
 nav ul li{
     display: inline-block;
@@ -39,17 +85,18 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a{
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 18px;
     position: relative;
+    text-shadow: rgb(0, 0, 0) -2px 2px 5px;
 }
 
 nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #00ADB5;
+    background-color: rgb(35, 128, 250);
     position: absolute;
     left:0px;
     bottom:-6px;
@@ -58,22 +105,13 @@ nav ul li a::after{
 nav ul li a:hover::after{
     width:100%;
 }
-.header-text{
-    margin-top: 20%;
-    font-size: 30px;
-}
-.header-text h1{
-    font-size: 60px;
-    margin-top: 20px;   
-}
-.header-text h1 span{
-    color:#00ADB5
-}
 
 /* about */
 #about{
-    padding: 80px 0;
-    color: #EEEEEE;
+    padding: 100px 10% 10%;
+    color: #ababab;
+    border-bottom: solid;
+    border-color: black;
 }
 .row{
     display: flex;
@@ -94,7 +132,7 @@ nav ul li a:hover::after{
 .subtitle{
     font-size: 60px;
     font-weight: 600;
-    color:white;
+    color: rgb(35, 128, 250);
 }
 .tab-titles{
     display: flex;
@@ -111,7 +149,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #00ADB5;
+    background-color: rgb(35, 128, 250);
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -127,8 +165,9 @@ nav ul li a:hover::after{
 }
 
 .tab-content ul li span{
-    color: #00ADB5;
+    color:rgb(35, 128, 250);
     font-size: 14px;
+    font-weight: 700;
 }
 .tab-content{
     display:none;
@@ -136,21 +175,28 @@ nav ul li a:hover::after{
 .tab-content.active-tab{
     display: block;
 }
+
 /*portfolio*/
 #portfolio{
-    padding:50px 0;
-
+    padding: 100px 10% 10%;
+    background-color: rgb(120, 164, 223);
+    border-bottom: solid;
+}
+#portfolio .subtitle{
+    color: #2b2b2c;
 }
 .project-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap:40px;
     margin-top: 50px;
+
 }
 .project{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+    box-shadow: 0px 0px 10px rgb(46, 46, 46);
 }
 .project img{
     width: 100%;
@@ -162,7 +208,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(0,0,0,0.6), #00ADB5);
+    background: linear-gradient(rgba(85, 84, 84, 0.6), rgb(192, 193, 194));
     border-radius: 10px;
     position:absolute;
     left: 0;
@@ -177,13 +223,18 @@ nav ul li a:hover::after{
     font-size: 14px;
     transition: height .5s;
 }
+.layer P{
+    font-weight: 500;
+    text-shadow: rgb(255, 255, 255) 0px 0px 2px;
+}
 .layer h3{
     font-weight: 700;
     margin-bottom: 20px;
+    text-shadow: rgb(255, 255, 255) 0px 0px 2px;
 }
 .layer a{
     margin-top: 20px;
-    color:#00ADB5;
+    color:rgb(35, 128, 250);
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -203,7 +254,8 @@ nav ul li a:hover::after{
     display:block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #00ADB5;
+    border: 2px solid rgb(35, 128, 250);
+    box-shadow: 1px 1px 5px rgb(0, 0, 0);
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -211,9 +263,13 @@ nav ul li a:hover::after{
     transition: .2s;
 }
 .btn:hover{
-    background: #00ADB5;
+    background: rgb(35, 128, 250);
 }
 /*contact*/
+#contact{
+    padding: 100px 10% 10%;
+
+}
 .contact-left{
     flex-basis: 35%;
 
@@ -227,7 +283,7 @@ nav ul li a:hover::after{
 
 }
 .contact-left p i{
-    color:#00ADB5;
+    color:rgb(35, 128, 250);
     margin-right: 15px;
     font-size: 25px;
 }
@@ -244,13 +300,13 @@ nav ul li a:hover::after{
     
 }
 .social-icons a:hover{
-    color:#00ADB5;
+    color:rgb(35, 128, 250);
     transform: scale(1.2) translateY(-5px);
 }
 
 .btn.btn2{
     display: inline-block;
-    background:#00ADB5;
+    background:rgb(35, 128, 250);
 }
 .contact-right form{
     width: 100%;
@@ -259,7 +315,7 @@ form input, form textarea{
     width: 100%;
     border:0;
     outline: none;
-    background: rgb(160, 157, 157);
+    background: rgb(196, 196, 196);
     padding: 15px;
     margin: 15px 0;
     color: #fff;
@@ -282,25 +338,37 @@ form .btn2{
     margin-top: 20px;
     color:#888484
 }
+
+
+
 /*phone/small screen*/
 nav .fas{
     display: none;
 }
 
-@media only screen and (max-width: 600px){
-    .header-text{
-        margin-top:100%;
+@media only screen and (max-width: 800px){
+    header{
+        padding: 20px 20px;
+    }
+    #landing{
         font-size: 16px;
     }
-    .header-text h1{
-        font-size: 30px;
+    #landing h1{
+        margin-top: 40vh;
+        font-size: 35px;
+        font-weight: 800;
     }
+    #landing p{
+        font-size: 25px;
+        font-weight: 600;
+    }
+    
     nav .fas{
         display: block;
         font-size: 25px;
     }
-    nav ul{
-        background: #00ADB5;
+    #sidebar{
+        background: #41403f;
         position: fixed;
         top:0;
         right: -200px;
@@ -309,11 +377,19 @@ nav .fas{
         padding-top: 50px;  
         z-index: 2;
         transition: right .5s;
+
+    }
+    #sidebar.opened{
+        right: 0;
+
     }
     nav ul li{
         display: block;
         margin:25px;
 
+    }
+    nav ul li a{
+        text-shadow: none;
     }
     nav ul .fas{
         position: absolute;
@@ -345,10 +421,4 @@ nav .fas{
     .copyright{
         font-size: 14px;
     }
-}
-
-#msg{
-    color:#00ADB5;
-    margin-top: -35px;
-    display: block;
 }
