--- a/style.css
+++ b/style.css
@@ -413,17 +413,17 @@ nav .fas{
         border-radius: 10px;
         box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.05), 0px 3px 6px rgba(0, 0, 0, 0.5);
         position: fixed;
-        top:0;
+        top:5px;
         right: -200px;
         width: 150px;
-        height: 45vh;
+        height: 275px;
         padding-top: 50px;  
         z-index: 2;
         transition: right .5s;
 
     }
     #sidebar.opened{
-        right: 0;
+        right: 5px;
 
     }
     nav ul li{
