--- a/style.css
+++ b/style.css
@@ -100,9 +100,8 @@ header.sticky{
 .logo{
     color: #fff;
     font-size: 20px;
-    letter-spacing: 2px;
-    font-weight: 400;
-    text-shadow: rgb(0, 0, 0) 2px 2px 5px;
+    letter-spacing: -1px;
+    font-weight: 600;
 }
 header nav{
     display: flex;
@@ -224,6 +223,7 @@ nav ul li a:hover::after{
 }
 .project img{
     width: 100%;
+    height: 60vh;
     border-radius: 10px;
     display: block;
     transition: transform 0.8s;
@@ -232,7 +232,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(168, 166, 166, 0.6), rgb(192, 193, 194));
+    background: linear-gradient(rgba(236, 234, 234, 0.6), rgba(164, 165, 167, 0.496));
     border-radius: 10px;
     position:absolute;
     left: 0;
