--- a/style.css
+++ b/style.css
@@ -9,6 +9,22 @@
     font-family: "Schibsted Grotesk", sans-serif;
     box-sizing: border-box;
 }
+.btn{
+    display:block;
+    width: fit-content;
+    border: 1px solid #0f539c;
+    background-color: #0f539c;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
+    transition: .2s;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.05), 0px 3px 6px rgba(0, 0, 0, 0.5);
+}
+.btn:hover{
+    background: white;
+    color: black;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -137,7 +153,7 @@ nav ul li a:hover::after{
 
 /* about */
 #about{
-    padding: 10% 10% 15%;
+    padding: 10% 10% 0 10%;
     color: black;
 }
 
@@ -159,7 +175,8 @@ nav ul li a:hover::after{
 }
 .subtitle{
     font-size: 60px;
-    font-weight: 600;
+    font-weight: 800;
+    letter-spacing: 1px;
     color: #0f539c
 }
 .tab-titles{
@@ -204,7 +221,111 @@ nav ul li a:hover::after{
     display: block;
 }
 
-/*portfolio*/
+/*projects*/
+#portfolio {
+    padding: 10%;
+}
+
+#portfolio h1 {
+    padding: 0 0 20px 20px;
+}
+
+#portfolio .projects {
+    display: flex;
+    gap: 30px;
+}
+
+@media (max-width: 1024px) {
+    #portfolio .projects {
+        flex-direction: column;
+    }
+}
+
+.projects article {
+    background-color: #44444418;
+    padding: 30px;
+    border-radius: 30px;
+    flex: 1;
+}
+
+.projects h3 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.technologies {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    font-size: 30px;
+    color: #0f539c;
+}
+
+.technologies i:hover {
+    transform: scale(1.2);
+    transition: ease .3s all;
+}
+
+.projects p {
+    margin-bottom: 10px;
+}
+
+.projects figure {
+    width: 100%;
+    padding-top: 56.25%;
+    overflow: hidden;
+    position: relative;
+}
+
+.projects figure img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    object-fit: cover;
+    transition: ease .6s all;
+}
+
+.projects figure figcaption {
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    opacity: 0;
+    visibility: hidden;
+    transition: ease .6s all;
+}
+
+.projects figure figcaption a {
+    color: white;
+    font-weight: 600;
+    text-decoration: none;
+    background-color: #0f539c;
+    border: #0f539c solid 2px;
+    padding: 4px;
+    border-radius: 5px;
+}
+
+.projects figure figcaption a:hover {
+    color: #0f539c;
+    background-color: white;
+}
+
+.projects figure:hover figcaption {
+    opacity: 1;
+    visibility: visible;
+}
+
+.projects figure:hover img {
+    transform: scale(1.2);
+}
+
+
+/*portfolio
 #portfolio{
     padding: 0px 10% 10%;
 }
@@ -274,22 +395,8 @@ nav ul li a:hover::after{
 .project:hover .layer{
     height:100%;
 }
-.btn{
-    display:block;
-    width: fit-content;
-    border: 1px solid #0f539c;
-    background-color: #0f539c;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: white;
-    transition: .2s;
-    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.05), 0px 3px 6px rgba(0, 0, 0, 0.5);
-}
-.btn:hover{
-    background: white;
-    color: black;
-}
+*/
+
 .project-more {
     text-align: center; 
     margin-top: 30px; 
@@ -300,7 +407,7 @@ nav ul li a:hover::after{
 
 /*contact*/
 #contact{
-    padding: 100px 10% 10%;
+    padding: 0% 10% 5% 10%;
 
 }
 .contact-left{
@@ -467,5 +574,8 @@ nav .fas{
     }
     .copyright{
         font-size: 14px;
+    }
+    #about, #portfolio, #contact{
+        padding-top: 20%;
     }
 }
