added about me ui changes

--- a/style.css
+++ b/style.css
@@ -173,10 +173,15 @@ nav ul li a:hover::after {
 
 /* about */
 #about {
-    padding: 10% 10% 0 10%;
+    padding: 5% 10% 0 10%;
     color: black;
 }
-
+#about .container{
+    background-color: #44444418;
+    border-radius: 10px;
+    padding: 10%;
+    box-shadow: -20px 20px 0 0 #0f539c71;
+}
 .swiper {
     width: 80%;
     height: fit-content;
@@ -201,7 +206,7 @@ nav ul li a:hover::after {
 
 .about-col-2 {
     flex-basis: 60%;
-
+    
 }
 
 .subtitle {
@@ -258,13 +263,15 @@ nav ul li a:hover::after {
 .tab-content.active-tab {
     display: block;
 }
-.techstack{
+
+.techstack {
     display: flex;
     gap: 10px;
     font-size: 15px;
 
 }
-.techstack li{
+
+.techstack li {
     width: 12vh;
     text-align: center;
     font-weight: 500;
@@ -273,7 +280,7 @@ nav ul li a:hover::after {
     background-color: #0f539c;
     border-radius: 18px;
     box-shadow: 5px 5px 0 0 rgba(186, 228, 0, 0.5);
-    
+
 }
 
 /*projects*/
