--- a/style.css
+++ b/style.css
@@ -176,12 +176,14 @@ nav ul li a:hover::after {
     padding: 5% 10% 0 10%;
     color: black;
 }
-#about .container{
+
+#about .container {
     background-color: #44444418;
     border-radius: 10px;
     padding: 10%;
     box-shadow: -20px 20px 0 0 #0f539c71;
 }
+
 .swiper {
     width: 80%;
     height: fit-content;
@@ -206,7 +208,7 @@ nav ul li a:hover::after {
 
 .about-col-2 {
     flex-basis: 60%;
-    
+
 }
 
 .subtitle {
@@ -308,6 +310,12 @@ nav ul li a:hover::after {
     padding: 30px;
     border-radius: 30px;
     flex: 1;
+    box-shadow: -10px 10px 0 0 #0f539c71;
+}
+
+.projects article h2 {
+    color: #0f539c;
+    font-weight: 700;
 }
 
 .projects h3 {
@@ -344,7 +352,7 @@ nav ul li a:hover::after {
     top: 0;
     left: 0;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: ease .6s all;
 }
 
