--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     font-family: "Schibsted Grotesk", sans-serif;
     box-sizing: border-box;
     font-weight: 500;
-    overflow: hidden;
 }
 
 .btn {
@@ -198,17 +197,28 @@ nav ul li a:hover::after {
 }
 
 .row {
-    justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
 }
 
+
 .about-col-1,
 .about-col-2 {
-    flex: 1 1 auto; 
-    min-width: 100%; 
+    flex: 1 1 auto;
+    min-width: 0;
 }
+
+.about-col-1 {
+    flex: 1 1 35%;
+    min-width: 300px;
+}
+
+.about-col-2 {
+    flex: 1 1 60%;
+    min-width: 300px;
+}
+
 .subtitle {
     font-size: 60px;
     font-weight: 800;
@@ -222,7 +232,6 @@ nav ul li a:hover::after {
 }
 
 .tab-links {
-    flex: 1 1 auto; 
     margin-right: 50px;
     font-size: 18px;
     font-weight: 500;
@@ -273,7 +282,7 @@ nav ul li a:hover::after {
 }
 
 .techstack li {
-    width: 12vh;
+    width: 90px;
     text-align: center;
     font-weight: 500;
     padding: 8px;
@@ -577,21 +586,41 @@ nav .fas {
 
     .about-col-1,
     .about-col-2 {
-        flex: 100%; 
+        flex: 1 1 auto;
+        min-width: 0;
     }
+
+    .about-col-1 {
+        flex: 1 1 100%;
+    }
+
+    .about-col-2 {
+        flex: 1 1 100%;
+        font-size: 14px;
+    }
+
+    .about-col-2 ul {
+        flex: 1 1 100%;
+        flex-wrap: wrap;
+    }
+
+
 
     .about-col-1 {
         margin-bottom: 30px;
         margin-top: 25px;
     }
 
-    .about-col-2 {
-        font-size: 14px;
-    }
-
     .tab-links {
         font-size: 16px;
         margin-right: 20px;
+        margin-bottom: 15px;
+    }
+
+    .tab-titles {
+        flex: 1 1 100%;
+        flex-wrap: wrap;
+
     }
 
     .contact-left,
